examples/neg/selecting_from_datatype.effekt
module examples/neg/selecting_from_datatype


type MyList {
  Bar(head: Int)
}

def foo(l: MyList) = head(l)

def main() = foo(Bar(42))